--- a/html/postslist.html
+++ b/html/postslist.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
     <!-- CSS for header in this file -->
-    <link href='/home/shipra/Downloads/upgrad/Project Scribbler/Scribbler/styles/common.css' rel='stylesheet'
+    <link href='../styles/common.css' rel='stylesheet'
         type='text/css'>
 
     <!-- CSS for rest of the content  in this file -->
-    <link href='/home/shipra/Downloads/upgrad/Project Scribbler/Scribbler/styles/postsList.css' rel='stylesheet'
+    <link href='../styles/postsList.css' rel='stylesheet'
         type='text/css'>
 
 </head>
@@ -309,9 +309,9 @@
     <!-- list of all posts ends here -->
 
     <!-- Place all Javascript for header in this file -->
-    <script src="/home/shipra/Downloads/upgrad/Project Scribbler/Scribbler/scripts/common.js"></script>
+    <script src="../scripts/common.js"></script>
     <!-- Place all Javascript for rest of the elements in this file -->
-    <script src="/home/shipra/Downloads/upgrad/Project Scribbler/Scribbler/scripts/postList.js"></script>
+    <script src="../scripts/postList.js"></script>
 </body>
 
 </html>
