--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- CSS for header in this file -->
-    <link href='styles/common.css' rel='stylesheet' type='text/css'>
+    <link href='./styles/common.css' rel='stylesheet' type='text/css'>
 
     <!-- Place all CSS for the rest of the elements in this file -->
-    <link href='styles/index.css' rel='stylesheet' type='text/css'>
+    <link href='./styles/index.css' rel='stylesheet' type='text/css'>
 
     <!-- google fonts for title -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -123,9 +123,9 @@
 
 
     <!-- Place all Javascript for header in this file -->
-    <script src="scripts/common.js"></script>
+    <script src="./scripts/common.js"></script>
     <!-- Place all Javascript for rest of the elements in this file -->
-    <script src="scripts/index.js"></script>
+    <script src="./scripts/index.js"></script>
 
 </body>
 
