Change absolute path  to relative path

--- a/html/post.html
+++ b/html/post.html
@@ -12,10 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
     <!-- CSS for header in this file -->
-    <link href='/home/shipra/Downloads/upgrad/Project Scribbler/Scribbler/styles/common.css' rel='stylesheet'
+    <link href='../styles/common.css' rel='stylesheet'
         type='text/css'>
     <!-- CSS for rest of the content  in this file -->
-    <link href='/home/shipra/Downloads/upgrad/Project Scribbler/Scribbler/styles/post.css' rel='stylesheet'
+    <link href='../styles/post.css' rel='stylesheet'
         type='text/css'>
 
 </head>
@@ -130,9 +130,9 @@
 
 
         <!-- Place all Javascript for header in this file -->
-        <script src="/home/shipra/Downloads/upgrad/Project Scribbler/Scribbler/scripts/common.js"></script>
+        <script src="../scripts/common.js"></script>
         <!-- Place all Javascript for rest of the elements in this file -->
-        <script src="/home/shipra/Downloads/upgrad/Project Scribbler/Scribbler/scripts/post.js"></script>
+        <script src="../scripts/post.js"></script>
     </body>
 
 </html>
