size of Create Post modal fixed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <!--  code for  createPost modal here -->
         <div class="modal" id="create-post-modal">
-            <div class="modal-content">
+            <div class="modal-content" id="modal-content">
                 <div class="modal-head">
                     <span onclick="closeCreatePostModal()" id="close" class="close">&times;</span>
                     <p class="modal-title">Pen Your Post</p>
